# openduckrust

./: .gitignore  README.md  product.architecture.md  specifications.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/di/: mod.rs
backend/src/handlers/: mod.rs
backend/src/middleware/: mod.rs  tenant.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
cdk/: package.json  tsconfig.json
cdk/lib/: ai-stack.ts  auth-stack.ts  compute-stack.ts  frontend-stack.ts  network-stack.ts  storage-stack.ts
cli/: Cargo.toml
cli/src/: main.rs
desktop/src-tauri/: tauri.conf.json
marketing-site/: index.html
marketing-site/css/: style.css
mcp/: Cargo.toml
mcp/src/: main.rs
mobile-app/: package.json
mobile-app/src/: App.tsx
runtime/: Cargo.toml
runtime/.cargo/: config.toml
runtime/scripts/: build-aarch64-static.sh  build-all.sh  build-beaglebone.sh  build-coral.sh  build-dgx-spark.sh  build-jetson-cuda.sh  build-jetson.sh  build-macos.sh  build-pi-armv7.sh  build-pi-zero-v1.sh  build-pi-zero2w.sh  build-qualcomm.sh  build-riscv64.sh  build-x86-linux-static.sh  build-x86-linux.sh
runtime/src/: config.rs  controller.rs  imu.rs  inference.rs  main.rs  motors.rs  peripherals.rs  reference_motion.rs  rl_utils.rs  sounds.rs
scripts/: create-github-repo.sh  deploy-backend.sh  deploy-marketing.sh  deploy-web.sh  get-logs.sh  launch-claude.sh
web-app/: index.html  package.json
web-app/src/: App.tsx
