[package]
name = "openduckrust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "export-swagger"
path = "src/bin/export_swagger.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
actix-web = "4"
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-bedrockruntime = "1"
lambda_http = "0.13"
lambda_runtime = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
