[package]
name = "openduckrust-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Open Duck Mini on-device runtime — zero-overhead bipedal robot control"
license = "MIT"
repository = "https://github.com/rocketpowerllc/openduckrust"

[dependencies]
# ONNX inference
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
ndarray = "0.17"

# Serial port for Feetech servos
serialport = "4"

# Linear algebra
nalgebra = "0.34"

# Gamepad input
gilrs = "0.11"

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Audio playback
rodio = "0.21"

# Async / threading
crossbeam-channel = "0.5"

# Timing
spin_sleep = "1"

# Byte order for servo protocol
byteorder = "1"

# Random number generation (eyes blink, sound selection)
rand = "0.8"

# Raspberry Pi hardware (Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", features = ["hal"] }
